# ucrtbase

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  stubs.c
asm/: weak.asm
def/: ucrt_arm64.def  ucrt_x64.def  ucrt_x86.def  vcruntime.weak.def  vcruntime_arm64.def  vcruntime_x64.def  vcruntime_x86.def
src/: lib.rs
stubs/: stubs.c
