[package]
name = "ucrtbase"
version = "0.1.0"
edition = "2024"
description = "Link Rust programs to the system `ucrtbase.dll` and eliminate the MSVC redist dependency"
repository = "https://github.com/Aalivexy/ucrtbase"
license = "MIT OR Apache-2.0"
keywords = ["msvc", "ucrtbase", "vc-ltl", "vc-ltl5"]
categories = ["development-tools::build-utils", "os::windows-apis"]

[build-dependencies]
cc = "1"
find-msvc-tools = "0.1"
object = "0.39"
